<resources>
    <string name="app_name">ColorMatch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Match">Match</string>
    <string name="Score">Points:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="newWord">New</string>
    <string name="waiting">Waiting</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="ColorSync">Color Sync</string>
    <string name="start">Start</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile_screen">ProfileScreen</string>
    <string name="name">Name:</string>
    <string name="addPro">Add</string>
    <string name="removePro">Remove</string>
    <string name="Select">Select</string>
</resources>
