<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brendanburns.colormatch.ProfileScreen"
    android:id="@+id/profileID">

    <TextView android:text="@string/name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProfileInfo"
        android:layout_below="@+id/playerList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerList"
        android:spinnerMode="dropdown"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPro"
        android:id="@+id/addPro"
        android:layout_above="@+id/inName"
        android:layout_alignRight="@+id/inName"
        android:layout_alignEnd="@+id/inName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removePro"
        android:id="@+id/removePro"
        android:layout_alignTop="@+id/playerList"
        android:layout_alignRight="@+id/inName"
        android:layout_alignEnd="@+id/inName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inName"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select"
        android:id="@+id/Select"
        android:layout_above="@+id/inName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
