<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ColorMatch">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Match"
        android:id="@+id/match"
        android:layout_above="@+id/score"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_above="@+id/match"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting"
        android:id="@+id/score"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.brendanburns.colormatch.DrawView"
        android:id="@+id/view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newWord"
        android:id="@+id/newB"
        android:layout_alignTop="@+id/match"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <View
        android:id="@+id/top"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true" />

    <View
        android:id="@+id/bottom"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
